kubernetes/deploy/pihole/services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  name: pihole-dns-tcp
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  healthCheckNodePort: 31234
  internalTrafficPolicy: Cluster
  ports:
  - name: dns
    nodePort: 30988
    port: 53
    protocol: TCP
    targetPort: dns
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
  externalIPs:
   - 192.168.100.50
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  name: pihole-dns-udp
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  healthCheckNodePort: 31703
  internalTrafficPolicy: Cluster
  ports:
  - name: dns-udp
    nodePort: 31138
    port: 53
    protocol: UDP
    targetPort: dns-udp
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
  externalIPs:
   - 192.168.100.50
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: pihole
    release: pihole
  type: ClusterIP
