kubernetes/deploy/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-pihole-admin@kubernetescrd
    kubernetes.io/ingress.class: traefik-internal
  name: pihole
spec:
  rules:
  - host: pihole.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: pihole-web
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
