kubernetes/deploy/pihole/pihole.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  name: pihole-dns-tcp
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  healthCheckNodePort: 31234
  internalTrafficPolicy: Cluster
  ports:
  - name: dns
    nodePort: 30988
    port: 53
    protocol: TCP
    targetPort: dns
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
  name: pihole-dns-udp
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  healthCheckNodePort: 31703
  internalTrafficPolicy: Cluster
  ports:
  - name: dns-udp
    nodePort: 31138
    port: 53
    protocol: UDP
    targetPort: dns-udp
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: pihole
    release: pihole
  type: ClusterIP

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pihole-admin
spec:
  addPrefix:
    prefix: /admin

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-pihole-admin@kubernetescrd
  name: pihole
spec:
  rules:
  - host: pihole.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: pihole-web
            port:
              name: http
        path: /
        pathType: ImplementationSpecific

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  selector:
    matchLabels:
      app: pihole
      release: pihole
  template:
    metadata:
      labels:
        app: pihole
        release: pihole
    spec:
      containers:
      - env:
        - name: WEB_PORT
          value: "80"
        image: pihole/pihole:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /admin.index.php
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: pihole
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /admin.index.php
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/pihole
          name: config
        - mountPath: /etc/dnsmasq.d
          name: config
          subPath: dnsmasq.d
      dnsConfig:
        nameservers:
        - 1.1.1.1
        - 8.8.8.8
      dnsPolicy: None
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pihole
